--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,20 +50,20 @@ summary {
 
 details {
     overflow: hidden;
-}
 
-details::details-content {
-    block-size: 0;
+    &::details-content {
+        block-size: 0;
 
-    @media (prefers-reduced-motion: no-preference) {
-        transition-property: block-size, content-visibility;
-        transition-duration: 0.3s;
-        transition-behavior: allow-discrete;
+        @media (prefers-reduced-motion: no-preference) {
+            transition-property: block-size, content-visibility;
+            transition-duration: 0.3s;
+            transition-behavior: allow-discrete;
+        }
     }
-}
 
-details[open]::details-content {
-    block-size: auto;
+    &[open]::details-content {
+        block-size: auto;
+    }
 }
 
 form {
@@ -145,36 +145,36 @@ blockquote {
     box-shadow: var(--box-shadow);
     margin: var(--paragraph-margin) 0;
     border-radius: var(--block-radius);
-}
 
-blockquote>*:first-child:before {
-    content: '“';
-    color: var(--icon-block);
-    display: inline;
-    font-family: var(--heading-font);
-    font-size: 5em;
-    line-height: 1rem;
-    position: relative;
-    top: 0.4em;
-    right: 0.2em;
-}
+    & > *:first-child:before {
+        content: '“';
+        color: var(--icon-block);
+        display: inline;
+        font-family: var(--heading-font);
+        font-size: 5em;
+        line-height: 1rem;
+        position: relative;
+        top: 0.4em;
+        right: 0.2em;
+    }
 
-blockquote>*,
-blockquote>p {
-    margin-inline: var(--paragraph-margin);
-}
+    & > *,
+    & > p {
+        margin-inline: var(--paragraph-margin);
+    }
 
-blockquote cite {
-    font-style: initial;
-    font-weight: bold;
-    display: block;
-    margin-top: var(--block-gap);
-    text-align: right;
-}
+    & cite {
+        font-style: initial;
+        font-weight: bold;
+        display: block;
+        margin-top: var(--block-gap);
+        text-align: right;
 
-blockquote cite::before {
-    content: ' ―';
-    padding-right: 0.5em;
+        &::before {
+            content: ' ―';
+            padding-right: 0.5em;
+        }
+    }
 }
 
 dl {
@@ -256,16 +256,20 @@ figure {
     padding: 1rem;
     box-shadow: var(--box-shadow);
     border-radius: var(--block-radius);
-}
 
-figure>p {
-    margin: 0;
-}
+    & > p {
+        margin: 0;
+    }
 
-figcaption {
-    font-style: italic;
-    text-align: center;
-    font-size: 0.8em;
+    & figcaption {
+        font-style: italic;
+        text-align: center;
+        font-size: 0.8em;
+    }
+
+    & img {
+        border-radius: var(--block-radius);
+    }
 }
 
 img {
@@ -280,16 +284,6 @@ img.resp-img {
 
 figure img {
     border-radius: var(--block-radius);
-}
-
-.page-content ul,
-.page-content ol {
-    margin: var(--paragraph-margin) 0 var(--paragraph-margin) 1.2rem;
-}
-
-.page-content ul.post-list,
-.page-content ol.post-list {
-    margin: var(--paragraph-margin) auto;
 }
 
 p {
@@ -314,64 +308,68 @@ table {
     border: 0.5px solid var(--fore);
     width: 100%;
     border-radius: var(--block-radius);
-}
 
-thead tr {
-    background-color: var(--aft-table-head);
-    color: var(--fore-table-head);
-}
+    & thead tr {
+        background-color: var(--aft-table-head);
+        color: var(--fore-table-head);
+    }
 
-th,
-td {
-    border: 0.5px solid var(--fore);
-    padding: 0.2em 0.3em;
-}
+    & th,
+    & td {
+        border: 0.5px solid var(--fore);
+        padding: 0.2em 0.3em;
+    }
 
-tbody tr {
-    background-color: var(--aft-table-row-even);
-    color: var(--fore-table-row-even);
-}
+    & tbody tr {
+        background-color: var(--aft-table-row-even);
+        color: var(--fore-table-row-even);
 
-tbody tr:nth-child(odd) {
-    background-color: var(--aft-table-row-odd);
-    color: var(--fore-table-row-odd);
+        &:nth-child(odd) {
+            background-color: var(--aft-table-row-odd);
+            color: var(--fore-table-row-odd);
+        }
+    }
 }
 
 /* Breadcrumbs */
 
-.site-breadcrumbs ol {
-    font-size: 0.8rem;
-    padding: 0.1em 1em;
-    text-align: center;
-}
+.site-breadcrumbs {
+    & ol {
+        font-size: 0.8rem;
+        padding: 0.1em 1em;
+        text-align: center;
+    }
 
-.site-breadcrumbs li {
-    display: inline;
-    padding: 0.2em;
-}
+    & li {
+        display: inline;
+        padding: 0.2em;
 
-.site-breadcrumbs li::before {
-    content: '>';
-    margin-inline-end: 0.3rem;
-}
+        &::before {
+            content: '>';
+            margin-inline-end: 0.3rem;
+        }
 
-.site-breadcrumbs li:first-child::before {
-    content: '';
-    margin-inline-end: 0;
-}
+        &:first-child::before {
+            content: '';
+            margin-inline-end: 0;
+        }
+    }
 
-.site-breadcrumbs a[aria-current] {
-    color: var(--fore);
-    text-decoration: none;
+    & a[aria-current] {
+        color: var(--fore);
+        text-decoration: none;
+    }
 }
 
 /* Navigation */
 
-.overlay-menu .site-nav {
-    font-size: 1.4em;
+.overlay-menu {
+    & .site-nav {
+        font-size: 1.4em;
 
-    @media (max-width: 860px) {
-        font-size: 1em;
+        @media (max-width: 860px) {
+            font-size: 1em;
+        }
     }
 }
 
@@ -390,46 +388,59 @@ tbody tr:nth-child(odd) {
         'toc'
         'content'
         'menu';
-}
 
-.content-group header {
-    padding-bottom: var(--block-gap);
+    & header {
+        padding-bottom: var(--block-gap);
 
-    @media (max-width: 860px) {
-        text-align: left;
+        @media (max-width: 860px) {
+            text-align: left;
+        }
+
+        & p {
+            font-size: 1.6em;
+            line-height: 1.2;
+            margin: calc(var(--block-gap) * -1) 0 0 0;
+            text-wrap: balance;
+        }
     }
-}
 
-.content-group header p {
-    font-size: 1.6em;
-    line-height: 1.2;
-    margin: calc(var(--block-gap) * -1) 0 0 0;
-    text-wrap: balance;
-}
-
-.content-group>nav {
-    grid-area: menu;
-    padding: var(--block-gap) 0;
+    & > nav {
+        grid-area: menu;
+        padding: var(--block-gap) 0;
+    }
 }
 
 .page-content {
     text-align: justify;
     hyphens: auto;
-}
 
-.page-content {
-
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
+    & h2,
+    & h3,
+    & h4,
+    & h5,
+    & h1,
+    & h6 {
         text-align: left;
     }
-}
 
-.page-content>h2:nth-child(1) {
-    margin-top: 0;
+    & ul,
+    & ol {
+        margin: var(--paragraph-margin) 0 var(--paragraph-margin) 1.2rem;
+
+        &.post-list {
+            margin: var(--paragraph-margin) auto;
+        }
+
+        &.recent-updates {
+            list-style: none;
+            margin-inline: 0;
+            padding-inline: 0;
+        }
+    }
+
+    & > h2:nth-child(1) {
+        margin-top: 0;
+    }
 }
 
 /* Table of Contents (TOC) */
@@ -437,35 +448,37 @@ tbody tr:nth-child(odd) {
 .page-toc {
     margin: 0 0 var(--paragraph-margin) 0;
     font-size: var(--font-size-meta);
-}
 
-.page-toc ol {
-    list-style: none;
-}
+    & ol {
+        list-style: none;
+    }
 
-.page-toc li a {
-    display: block;
-    padding: 0.5rem 1rem;
-}
+    & li {
+        & a {
+            display: block;
+            padding: 0.5rem 1rem;
+        }
 
-.page-toc li.toc-lev-2 {
-    margin-left: 0rem;
-}
+        &.toc-lev-2 {
+            margin-left: 0rem;
+        }
 
-.page-toc li.toc-lev-3 a {
-    margin-left: 1rem;
-}
+        &.toc-lev-3 a {
+            margin-left: 1rem;
+        }
 
-.page-toc li.toc-lev-4 a {
-    margin-left: 2rem;
-}
+        &.toc-lev-4 a {
+            margin-left: 2rem;
+        }
 
-.page-toc li.toc-lev-5 a {
-    margin-left: 3rem;
-}
+        &.toc-lev-5 a {
+            margin-left: 3rem;
+        }
 
-.page-toc li.toc-lev-6 a {
-    margin-left: 4rem;
+        &.toc-lev-6 a {
+            margin-left: 4rem;
+        }
+    }
 }
 
 /* Footer */
@@ -476,22 +489,22 @@ tbody tr:nth-child(odd) {
     width: 100%;
     background-color: var(--aft-block);
     margin-top: 4rem;
-}
 
-.site-footer h2 {
-    padding-top: 2rem;
-}
+    & h2 {
+        padding-top: 2rem;
+    }
 
-.site-footer a {
-    color: var(--fore-link);
-    text-decoration: none;
-    display: block;
-    padding: 0.5rem 1rem;
-}
+    & a {
+        color: var(--fore-link);
+        text-decoration: none;
+        display: block;
+        padding: 0.5rem 1rem;
 
-.site-footer a:hover,
-.site-footer a:focus {
-    color: var(--fore-link-alt);
+        &:hover,
+        &:focus {
+            color: var(--fore-link-alt);
+        }
+    }
 }
 
 /* Overlay (Mobile Navigation, Search) */
@@ -520,92 +533,91 @@ tbody tr:nth-child(odd) {
 .post-list {
     margin: 0;
     text-align: left;
-}
 
-.post-list .list-item {
-    background-color: var(--aft-block);
-    border-radius: var(----block-radius);
-    box-shadow: var(--box-shadow-unselected);
-    color: var(--fore-block);
-    list-style: none;
-    margin-bottom: var(--block-gap);
-    position: relative;
-}
+    & .list-item {
+        background-color: var(--aft-block);
+        border-radius: var(----block-radius);
+        box-shadow: var(--box-shadow-unselected);
+        color: var(--fore-block);
+        list-style: none;
+        margin-bottom: var(--block-gap);
+        position: relative;
 
-.post-list .list-item:hover,
-.post-list .list-item:focus-within {
-    box-shadow: var(--box-shadow);
-    transform: var(--transform-selected);
-}
+        &:hover,
+        &:focus-within {
+            box-shadow: var(--box-shadow);
+            transform: var(--transform-selected);
 
-.post-list .list-item[data-image='true']>article {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-areas: 'content img';
+            & .list-item-image {
+                background-color: var(--icon-block);
 
-    @media (max-width: 680px) {
-        /* Special Case - We let it be two-column until later */
-        display: unset;
-        grid-template-columns: unset;
-        grid-template-areas: unset;
+                & img {
+                    filter: grayscale(0);
+                    transform: rotate(3deg);
+                    scale: 1.2;
+                }
+            }
+        }
+
+        &[data-image='true'] {
+            & > article {
+                display: grid;
+                grid-template-columns: 2fr 1fr;
+                grid-template-areas: 'content img';
+
+                @media (max-width: 680px) {
+                    /* Special Case - We let it be two-column until later */
+                    display: unset;
+                    grid-template-columns: unset;
+                    grid-template-areas: unset;
+                }
+            }
+
+            & .list-item-image {
+                background-color: var(--fore-link);
+                padding: 1.5rem;
+            }
+        }
+
+        & .list-item-content {
+            padding: 1rem;
+            display: grid;
+            grid-template-rows: auto fit-content(5rem);
+            grid-gap: 1rem;
+            grid-area: content;
+
+            & h2,
+            & h3 {
+                margin: 0;
+                padding: 0;
+                font-size: 1.6rem;
+                text-decoration: none;
+
+                & a {
+                    text-decoration: none;
+                }
+            }
+        }
+
+        & .list-item-image img {
+            width: 100%;
+            min-height: 100%;
+            max-height: 8em;
+            object-fit: cover;
+            filter: grayscale(1);
+            box-shadow: var(--box-shadow);
+            transform: rotate(-3deg);
+            border-radius: var(--block-radius);
+            grid-area: img;
+            border: 3px solid var(--fore-link);
+
+            @media (max-width: 680px) {
+                filter: grayscale(calc(1 - var(--img-shown)));
+                scale: calc(1 + (0.2 * var(--img-shown)));
+                transform: rotate(3deg);
+            }
+        }
     }
-}
-
-.post-list .list-item-content {
-    padding: 1rem;
-    display: grid;
-    grid-template-rows: auto fit-content(5rem);
-    grid-gap: 1rem;
-    grid-area: content;
-}
-
-.post-list .list-item-content h2,
-.post-list .list-item-content h3 {
-    margin: 0;
-    padding: 0;
-    font-size: 1.6rem;
-    text-decoration: none;
-}
-
-.post-list .list-item-content h2 a,
-.post-list .list-item-content h3 a {
-    text-decoration: none;
-}
-
-.post-list .list-item[data-image='true'] .list-item-image {
-    background-color: var(--fore-link);
-    padding: 1.5rem;
-}
-
-.post-list .list-item .list-item-image img {
-    width: 100%;
-    min-height: 100%;
-    max-height: 8em;
-    object-fit: cover;
-    filter: grayscale(1);
-    box-shadow: var(--box-shadow);
-    transform: rotate(-3deg);
-    border-radius: var(--block-radius);
-    grid-area: img;
-    border: 3px solid var(--fore-link);
-
-    @media (max-width: 680px) {
-        filter: grayscale(calc(1 - var(--img-shown)));
-        scale: calc(1 + (0.2 * var(--img-shown)));
-        transform: rotate(3deg);
-    }
-}
-
-.post-list .list-item:hover .list-item-image,
-.post-list .list-item:focus-within .list-item-image {
-    background-color: var(--icon-block);
-}
-
-.post-list .list-item:hover .list-item-image img,
-.post-list .list-item:focus-within .list-item-image img {
-    filter: grayscale(0);
-    transform: rotate(3deg);
-    scale: 1.2;
 }
 
 .page-content ul.recent-updates {
@@ -629,41 +641,45 @@ tbody tr:nth-child(odd) {
     flex-direction: row;
     gap: 0.5rem;
     margin: var(--block-gap) 0 var(--block-gap-l) 0;
+
+    & > * {
+        flex: 1;
+        text-align: center;
+    }
+
+    & a[aria-current] {
+        text-decoration: none;
+        color: var(--fore);
+    }
+
+    & span,
+    & a {
+        display: inline-block;
+        color: var(--fore-link);
+        background-color: var(--aft-block);
+        text-decoration: none;
+        font-size: 1rem;
+    }
+
+    & a:hover,
+    & a:focus {
+        background-color: var(--fore-link-alt);
+        color: var(--aft);
+    }
 }
 
-.post-paging>* {
-    flex: 1;
-    text-align: center;
-}
-
-.post-paging a[aria-current] {
-    text-decoration: none;
-    color: var(--fore);
-}
-
-.post-paging span,
-.post-paging a {
-    display: inline-block;
-    color: var(--fore-link);
-    background-color: var(--aft-block);
-    text-decoration: none;
-    font-size: 1rem;
-}
-
-.post-paging a:hover,
-.post-paging a:focus {
-    background-color: var(--fore-link-alt);
-    color: var(--aft);
-}
-
-.paging-collapse-before:before,
-.paging-collapse-after:after {
-    top: 0.2em;
-    content: '...';
-    text-decoration: none;
-    color: var(--fore);
-    display: inline-block;
+.paging-collapse-before,
+.paging-collapse-after {
     position: relative;
+    color: var(--fore);
+    display: inline-block;
+    text-decoration: none;
+
+    &:before,
+    &:after {
+        top: 0.2em;
+        content: '...';
+    }
 }
 
 .paging-collapse-before:before {
@@ -674,94 +690,98 @@ tbody tr:nth-child(odd) {
     padding-left: 0.6rem;
 }
 
-.post-meta:not(.mini) {
-    border-top: 1px solid var(--icon-block);
-    display: flex;
-    font-size: var(--font-size-meta);
-    gap: var(--block-gap);
-    margin: var(--block-gap) 0 0 0;
-    padding: var(--block-gap) 0;
+.post-meta {
+    &:not(.mini) {
+        border-top: 1px solid var(--icon-block);
+        display: flex;
+        font-size: var(--font-size-meta);
+        gap: var(--block-gap);
+        margin: var(--block-gap) 0 0 0;
+        padding: var(--block-gap) 0;
 
-    @media (max-width: 860px) {
-        flex-direction: column;
+        @media (max-width: 860px) {
+            flex-direction: column;
+        }
+
+        & .author-image {
+            width: 100px;
+            height: 100px;
+            margin-right: 1rem;
+            object-fit: cover;
+            border-radius: 50%;
+
+            @media (max-width: 860px) {
+                display: block;
+            }
+        }
     }
-}
 
-.post-meta .author-image {
-    width: 100px;
-    height: 100px;
-    margin-right: 1rem;
-    object-fit: cover;
-    border-radius: 50%;
-
-    @media (max-width: 860px) {
-        display: block;
+    & > .author-info {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
     }
-}
 
-.post-meta>.author-info {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-}
+    & time[itemprop='dateModified'] {
+        font-style: italic;
+    }
 
-.post-meta time[itemprop='dateModified'] {
-    font-style: italic;
-}
+    &.mini {
+        font-size: var(--font-size-meta);
+        margin: 0 0 var(--paragraph-margin) 0;
 
-.post-meta.mini {
-    font-size: var(--font-size-meta);
-    margin: 0 0 var(--paragraph-margin) 0;
-}
+        & > .author-info {
+            & > *:nth-child(n + 3)::before {
+                content: '|';
+                padding: 0 0.3rem;
+                opacity: 0.5;
+            }
 
-.post-meta.mini>.author-info>*:nth-child(n + 3)::before {
-    content: '|';
-    padding: 0 0.3rem;
-    opacity: 0.5;
-}
-
-.post-meta.mini>.author-info>.author-image {
-    height: 1rem;
-    width: 1rem;
-    margin: 0 0.3rem 0 0;
+            & > .author-image {
+                height: 1rem;
+                width: 1rem;
+                margin: 0 0.3rem 0 0;
+            }
+        }
+    }
 }
 
 .post-taxonomy {
     margin: 0 0 var(--block-gap-l) 0;
-}
 
-.post-taxonomy h2 {
-    font-size: 1rem;
-    font-family: var(--content-font);
-    margin: 0;
-    padding: 0 var(--grid-gap) 0 0;
-    display: inline-block;
-}
+    & h2 {
+        font-size: 1rem;
+        font-family: var(--content-font);
+        margin: 0;
+        padding: 0 var(--grid-gap) 0 0;
+        display: inline-block;
+    }
 
-.post-taxonomy ul {
-    margin: 0;
-    list-style: none;
-    display: inline-block;
-}
+    & ul {
+        margin: 0;
+        list-style: none;
+        display: inline-block;
+    }
 
-.post-taxonomy li {
-    display: inline-block;
-    margin: 0.3em;
-}
+    & li {
+        display: inline-block;
+        margin: 0.3em;
+    }
 
-.post-taxonomy a {
-    display: inline-block;
-    color: var(--fore-link);
-    background-color: var(--aft-block);
-    padding: 0.1em 0.7em;
-    text-decoration: none;
-    font-size: 1rem;
-}
+    & a {
+        display: inline-block;
+        color: var(--fore-link);
+        background-color: var(--aft-block);
+        padding: 0.1em 0.7em;
+        text-decoration: none;
+        font-size: 1rem;
 
-.post-taxonomy a:hover,
-.post-taxonomy a:focus {
-    background-color: var(--fore-link-alt);
-    color: var(--aft);
+        &:hover,
+        &:focus {
+            background-color: var(--fore-link-alt);
+            color: var(--aft);
+        }
+    }
 }
 
 .author-page {
